--- a/mobile.css
+++ b/mobile.css
@@ -3,22 +3,14 @@
 } */
 
 body {
-	/*font-family: 'Cutive';*/
-	/* line-height: 1.7em; */
 	background-image: url("Home07.png");
-	background-position: top;
+	background-size: contain;
 	background-repeat: no-repeat;
 	background-attachment: scroll;
-	background-size: 100%;
-}
-
-#filler {
-	height: 2830px;
-	color: red;
-	visibility: hidden;
-	/* background-color: yellow; */
-	/* font-size: 1ch; */
-	/* color: white; */
+	width: 100%;
+	height: 0;
+	padding-top: 612%;
+	/* background-position: top; */
 }
 
 #desktopWarning {
