--- a/mobile.css
+++ b/mobile.css
@@ -4,14 +4,16 @@
 
 body {
 	/* background-image: url("Home07.png"); */
+	/* padding-top: 612%; */
+	
 	background-image: url("Shop01.png");
+	padding-top: 573%;
+
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-attachment: scroll;
 	width: 100%;
 	height: 0;
-	padding-top: 612%;
-	/* background-position: top; */
 }
 
 #desktopWarning {
